<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:background="@drawable/bkgrnd">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:cursorVisible="true"
            android:text="@string/menu"
            android:textColor="@color/title_color"
            android:textSize="30dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/icon" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/TextView_Nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_nickname"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold"></TextView>
            <EditText
                android:id="@+id/EditText_Nickname"
                android:layout_height="fill_parent"
                android:maxLength="20"
                android:layout_width="fill_parent"
                android:maxLines="1"
                android:inputType="textPersonName"></EditText>
            <TextView
                android:id="@+id/TextView_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_email"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold"></TextView>
            <EditText
                android:id="@+id/EditText_Email"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:maxLines="1"
                android:inputType="textEmailAddress"></EditText>
            <TextView
                android:id="@+id/TextView_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_password"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold"></TextView>
            <LinearLayout
                android:id="@+id/LinearLayoutPassword"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <Button
                    android:id="@+id/Button_Password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_button_pwd"
                    android:onClick="onSetPasswordButtonClick"></Button>
                <TextView
                    android:id="@+id/TextView_Password_Info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/help_text_size"
                    android:textStyle="bold"
                    android:gravity="center"></TextView>
            </LinearLayout>
            <TextView
                android:id="@+id/TextView_DOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_dob"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold"></TextView>
            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <Button
                    android:id="@+id/Button_DOB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_button_dob"
                    android:onClick="onPickDateButtonClick"></Button>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/help_text_size"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:id="@+id/TextView_DOB_Info"></TextView>
            </LinearLayout>
            <TextView
                android:id="@+id/TextView_Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_gender"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold"></TextView>
            <Spinner
                android:id="@+id/Spinner_Gender"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:entries="@array/genders"></Spinner>
        </LinearLayout>
    </ScrollView>

</LinearLayout>